--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -1,41 +1,97 @@
 <ion-header [translucent]="true" >
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" class="ion-hide-sm-up">
       <ion-menu-button autoHide="true" >
       </ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="start" class="ion-hide-sm-down" *ngIf="userIds.uid !==null && userIds !==-1">
+      <ion-button  slot="start" class="menuIcon" (click)="presentMenuPopup($event)">
+       <ion-icon name="menu-outline" ></ion-icon>
+     </ion-button>
+   </ion-buttons>
 
+   <ion-title  class="headerTitle" *ngIf="accessRights.write === true" mode="md"> 
+    <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end cursor"  (click)="openPopover('projectSummary')"/>
+    <ion-icon class="cursor" slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" (click)="openPopover('projectSummary')"></ion-icon>
+    <ion-text  class="cursor projectName" (click)="openPopover('projectSummary')">{{project.summary.name}}</ion-text>
+    <ion-icon class="ion-margin-start  cursor ion-hide-sm-down" name="pencil-outline"  (click)="openPopover('projectSummary')"></ion-icon>
+  </ion-title>
+  <ion-title  class="headerTitle" *ngIf="accessRights.write === false">
+    <div class="menu ion-margin-end">
+      <img  src="assets/images/logo.svg" class="logoES ion-margin-end  ion-hide-sm-down" routerLink="/intl/fr" *ngIf="userIds.uid ===null || userIds ===-1" [routerLink]="['/intl/fr']">
+      <span  *ngIf="userIds.uid ===null ||  userIds ===-1" class="ion-hide-sm-down" >{{'LANDINGPAGE.Title' | translate}}
+        <ion-badge class="beta  ion-hide-sm-down">Beta</ion-badge>
+      </span> 
+    </div>
+    <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end"  />
+    <ion-icon   slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" ></ion-icon>
+    <ion-text  class="projectName">{{project.summary.name}}</ion-text>
+  </ion-title>
+  <ion-buttons slot="primary" *ngIf="project">
+   <ion-button  [disabled]="accessRights.write === false" (click)="presentSharingStatusPopover($event)">
+    <ion-icon class="ion-margin-end cursor"  name="lock-closed-outline" *ngIf="project.sharingStatus ==='private'" class="ion-hide-md-down"></ion-icon>
+    <ion-icon class="ion-margin-end cursor"  name="globe-outline" *ngIf="project.sharingStatus ==='public'" class="ion-hide-md-down"></ion-icon>
+    <ion-text class="ion-hide-m-down" *ngIf="project.sharingStatus ==='private'">{{'PROJECT.Private'  | translate}}  </ion-text>
+    <ion-text class="ion-hide-sm-down" *ngIf="project.sharingStatus ==='public'">{{'PROJECT.Public'  | translate}}  </ion-text>
 
-    <ion-title  class="headerTitle" *ngIf="accessRights.write === true" mode="md"> 
-      <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end cursor"  (click)="openPopover('projectSummary')"/>
-      <ion-icon class="cursor" slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" (click)="openPopover('projectSummary')"></ion-icon>
-      <ion-text  class="cursor projectName" (click)="openPopover('projectSummary')">{{project.summary.name}}</ion-text>
-      <ion-icon class="ion-margin-start  cursor ion-hide-sm-down" name="pencil-outline"  (click)="openPopover('projectSummary')"></ion-icon>
-    </ion-title>
-    <ion-title  class="headerTitle" *ngIf="accessRights.write === false">
-      <div class="menu ion-margin-end">
-        <img  src="assets/images/logo.svg" class="logoES ion-margin-end" routerLink="/intl/fr" *ngIf="uid ===null || uid ===-1" [routerLink]="['/intl/fr']">
-        <span  *ngIf="uid ===null ||  uid ===-1" class="ion-hide-sm-down" >{{'LANDINGPAGE.Title' | translate}}
-          <ion-badge class="beta  ion-hide-sm-down">Beta</ion-badge>
-        </span> 
-      </div>
-      <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end"  />
-      <ion-icon   slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" ></ion-icon>
-      <ion-text  class="projectName">{{project.summary.name}}</ion-text>
-    </ion-title>
-    <ion-buttons slot="primary" *ngIf="project">
-     <ion-button  [disabled]="accessRights.write === false" (click)="presentSharingStatusPopover($event)">
-      <ion-icon class="ion-margin-end cursor"  name="lock-closed-outline" *ngIf="project.sharingStatus ==='private'" class="ion-hide-md-down"></ion-icon>
-      <ion-icon class="ion-margin-end cursor"  name="globe-outline" *ngIf="project.sharingStatus ==='public'" class="ion-hide-md-down"></ion-icon>
-      <ion-text class="ion-hide-m-down" *ngIf="project.sharingStatus ==='private'">{{'PROJECT.Private'  | translate}}  </ion-text>
-      <ion-text class="ion-hide-sm-down" *ngIf="project.sharingStatus ==='public'">{{'PROJECT.Public'  | translate}}  </ion-text>
-
-    </ion-button>
-  </ion-buttons>
-  <app-user-avatar slot="end" *ngIf="uid !==null && uid !==-1"></app-user-avatar>
+  </ion-button>
+</ion-buttons>
+<app-user-avatar slot="end" *ngIf="userIds.uid !==null && userIds !==-1"></app-user-avatar>
 
 </ion-toolbar>
 </ion-header>     
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="leftMenu ion-hide-sm-down" [ngClass]="{'expanded': expandedMenu ===true} ">
+
+        <ion-item  [ngClass]="{'selected': isSelectedTab('summary') ===true} " class="tint firstItem item selected" lines="none" 
+        tooltip="{{'PROJECT.DashboardMenuTooltip' | translate }}" [options]="tooltipOptions"  (click)="navigate('summary')" >
+        <ion-icon name="speedometer-outline"></ion-icon>
+        <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Dashboard' | translate }}</ion-text></ion-label>
+      </ion-item>
+
+      <ion-item lines="none" [ngClass]="{'selected': isSelectedTab('timeline') ===true} "
+      tooltip="{{'PROJECT.TimelineMenuTooltip' | translate }}" [options]="tooltipOptions" (click)="navigate('timeline')" >
+      <ion-icon name="calendar-outline"></ion-icon>
+      <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Timeline' | translate }}</ion-text></ion-label>
+    </ion-item>
+    <ion-item lines="none" [ngClass]="{'selected': isSelectedTab('team') ===true} " 
+    tooltip="{{'PROJECT.TeamMenuTooltip' | translate }}"   [options]="tooltipOptions"  (click)="navigate('team')" >
+    <ion-icon name="people-circle-outline"></ion-icon><ion-badge>{{teamMembers.length}}</ion-badge>
+    <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start withBadge"><ion-text >{{'EXECUTIVE.Team' | translate }}</ion-text></ion-label>
+  </ion-item>
+  <ion-item lines="none" [ngClass]="{'selected': isSelectedTab('resources') ===true} " 
+  tooltip="{{'PROJECT.ApplicationMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="navigate('resources')" >
+  <ion-icon name="grid-outline"></ion-icon>
+  <ion-badge>{{resources.length}}</ion-badge>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start withBadge"><ion-text >{{'EXECUTIVE.Application' | translate }}</ion-text></ion-label>
+</ion-item>
+<ion-item lines="none" tooltip="{{'PROJECT.FinancesMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="openFeedbackPopover('finance')">
+  <ion-icon name="briefcase-outline" class="disabledIcon"></ion-icon>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Finances' | translate }}</ion-text></ion-label>
+</ion-item>
+<ion-item lines="none"  tooltip="{{'PROJECT.OtherMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="openFeedbackPopover('other')">
+  <ion-icon name="ellipsis-horizontal-circle" ></ion-icon>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Other' | translate }}</ion-text></ion-label>
+</ion-item>
+<div class="separator"></div>
+<ion-item lines="none" (click)="requestRemoveProject()" *ngIf="project.ownerUid === userIds.uid">
+  <ion-icon name="trash-outline"></ion-icon>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >Delete</ion-text></ion-label>
+</ion-item>
+<ion-footer>
+
+ <ion-icon name="chevron-forward-outline" (click)="expandMenu()" *ngIf="expandedMenu ===false" class="expandButton"></ion-icon>
+ <ion-icon name="chevron-back-outline" (click)="expandMenu()" *ngIf="expandedMenu ===true" class="expandButton"></ion-icon>
+</ion-footer>
+</ion-col>
+<ion-col class="shadowContent">
   <ion-router-outlet id="project-content"></ion-router-outlet>
-</ion-content>
+</ion-col>
+</ion-row>
+</ion-grid>
+ <!--
+     <ion-router-outlet id="project-content"></ion-router-outlet>
+   -->
+ </ion-content>
