--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,43 @@
 						<ion-label>{{'PROJECT.SystemD' | translate}}</ion-label>
 					</ion-item>	
 				</ion-list> 
+				<div class="menuSeparator ion-hide-sm-up "></div>
+				<ion-list class="ion-hide-sm-up "  *ngIf="projectRoute === true && project !== null" >
+					<ion-item  [ngClass]="{'selected': isSelectedTab('summary') ===true}" lines="none" (click)="navigate('summary')" >
+						<ion-icon name="speedometer-outline"></ion-icon>
+						<ion-label class="ion-margin-start">
+							<ion-text >{{'EXECUTIVE.Dashboard' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
 
+					<ion-item lines="none" [ngClass]="{'selected': isSelectedTab('timeline') ===true} " (click)="navigate('timeline')" >
+						<ion-icon name="calendar-outline"></ion-icon>
+						<ion-label class="ion-margin-start">
+							<ion-text >{{'EXECUTIVE.Timeline' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+					<ion-item lines="none" [ngClass]="{'selected': isSelectedTab('team') ===true} "  (click)="navigate('team')" >
+						<ion-icon name="people-circle-outline"></ion-icon><ion-badge>{{teamMembers.length}}</ion-badge>
+						<ion-label class="ion-margin-start withBadge">
+							<ion-text >{{'EXECUTIVE.Team' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+					<ion-item lines="none" [ngClass]="{'selected': isSelectedTab('resources') ===true} " (click)="navigate('resources')" >
+						<ion-icon name="grid-outline"></ion-icon>
+						<ion-badge>{{resources.length}}</ion-badge>
+						<ion-label class="ion-margin-start withBadge">
+							<ion-text >{{'EXECUTIVE.Application' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+					<ion-item lines="none"   (click)="openFeedbackPopover('finance')">
+						<ion-icon name="briefcase-outline" class="disabledIcon"></ion-icon>
+						<ion-label class="ion-margin-start"><ion-text >{{'EXECUTIVE.Finances' | translate }}</ion-text></ion-label>
+					</ion-item>
+					<ion-item lines="none"  (click)="openFeedbackPopover('other')">
+						<ion-icon name="ellipsis-horizontal-circle" ></ion-icon>
+						<ion-label class="ion-margin-start"><ion-text >{{'EXECUTIVE.Other' | translate }}</ion-text></ion-label>
+					</ion-item>
+				</ion-list>
 				<ion-item lines="none" class="removeButton fullWidth" *ngIf="projectRoute === true && project !== null && userIds">
 					<ion-button expand="block" fill="outline" color="danger" class="fullWidth" (click)="requestRemoveProject()" *ngIf="project.data.ownerUid === userIds.uid">{{'PROJECT.Remove' | translate }}</ion-button>
 				</ion-item>
@@ -31,7 +67,56 @@
 </ion-app>
 
 <ion-app *ngIf="isUserLogged ===false" >
-	<ion-router-outlet id="main-content"></ion-router-outlet>
+	<ion-split-pane contentId="main-content" when="(min-width: 2500px)" class="sideMenu" >
+		<ion-menu contentId="main-content" type="push"  menuId="mainMenu" (click)="toggle()" >
+			<ion-content>
+				<ion-list >
+					<ion-item  routerDirection="root" [routerLink]="['/intl/fr']" lines="none" detail="false" >
+						<img  src="assets/images/logo.svg" class="logoES ion-margin-end " >
+						<ion-label>Entrepreneur-Studio</ion-label>
+					</ion-item>		
+				</ion-list> 
+				<div class="menuSeparator ion-hide-sm-up "></div>
+				<ion-list class="ion-hide-sm-up "  *ngIf="projectRoute === true && project !== null" >
+					<ion-item  [ngClass]="{'selected': isSelectedTab('summary') ===true}" lines="none" (click)="navigate('summary')" >
+						<ion-icon name="speedometer-outline"></ion-icon>
+						<ion-label class="ion-margin-start">
+							<ion-text >{{'EXECUTIVE.Dashboard' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+
+					<ion-item lines="none" [ngClass]="{'selected': isSelectedTab('timeline') ===true} " (click)="navigate('timeline')" >
+						<ion-icon name="calendar-outline"></ion-icon>
+						<ion-label class="ion-margin-start">
+							<ion-text >{{'EXECUTIVE.Timeline' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+					<ion-item lines="none" [ngClass]="{'selected': isSelectedTab('team') ===true} "  (click)="navigate('team')" >
+						<ion-icon name="people-circle-outline"></ion-icon><ion-badge>{{teamMembers.length}}</ion-badge>
+						<ion-label class="ion-margin-start withBadge">
+							<ion-text >{{'EXECUTIVE.Team' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+					<ion-item lines="none" [ngClass]="{'selected': isSelectedTab('resources') ===true} " (click)="navigate('resources')" >
+						<ion-icon name="grid-outline"></ion-icon>
+						<ion-badge>{{resources.length}}</ion-badge>
+						<ion-label class="ion-margin-start withBadge">
+							<ion-text >{{'EXECUTIVE.Application' | translate }}</ion-text>
+						</ion-label>
+					</ion-item>
+					<ion-item lines="none"   (click)="openFeedbackPopover('finance')">
+						<ion-icon name="briefcase-outline" class="disabledIcon"></ion-icon>
+						<ion-label class="ion-margin-start"><ion-text >{{'EXECUTIVE.Finances' | translate }}</ion-text></ion-label>
+					</ion-item>
+					<ion-item lines="none"  (click)="openFeedbackPopover('other')">
+						<ion-icon name="ellipsis-horizontal-circle" ></ion-icon>
+						<ion-label class="ion-margin-start"><ion-text >{{'EXECUTIVE.Other' | translate }}</ion-text></ion-label>
+					</ion-item>
+				</ion-list>
+			</ion-content>
+		</ion-menu>
+		<ion-router-outlet id="main-content"></ion-router-outlet>
+	</ion-split-pane>
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
 		<ion-fab-button (click)="displayQuestionModal()"  class="ion-hide-sm-down">
 			<ion-icon name="chatbox-ellipses-outline"></ion-icon>	
