--- a/src/app/project/executive/summary/summary.page.scss
+++ b/src/app/project/executive/summary/summary.page.scss
@@ -28,6 +28,13 @@ ion-content.customStyle{
 		color: var(--ion-color-primary-contrast);
 
 	}
+	ion-item.screenTitle{
+		--background:#0000002e;
+		ion-note{
+			font-size:24px;
+			color:var(--ion-color-primary-contrast);
+		}
+	}
 }
 
 
@@ -179,6 +186,9 @@ ion-content.customStyle{
 		border-radius: 4px;
 
 	}
+	h1{
+		font-size: 20px;
+	}
 	.move{
 		position: absolute;
 		top: 26%;
@@ -273,3 +283,4 @@ ion-content.customStyle{
 		}
 	}
 }
+
