--- a/src/app/project/project.page.scss
+++ b/src/app/project/project.page.scss
@@ -11,11 +11,11 @@
   cursor: pointer;
 }
 .headerTitle .logo {
-    max-width: 100px;
-    width:auto;
-    max-height: 56px;
-    display: inline-block;
-    vertical-align: middle;
+  max-width: 100px;
+  width:auto;
+  max-height: 56px;
+  display: inline-block;
+  vertical-align: middle;
 }
 .menu{
 	display: inline-block;
@@ -31,11 +31,137 @@
 	}
 }
 .projectName{
-    @media(max-width: 400px) {
-      font-size: small;
-    }
+  @media(max-width: 400px) {
+    font-size: small;
+  }
 
 }
 .projectName:hover{
   background:   var(--ion-color-light);
+}
+
+ion-grid{
+  height:100%;
+  padding:0px;
+  ion-row{
+    height:100%;
+  }
+
+  ion-item{
+    transition: 1s;
+    height:40px;
+    --inner-padding-start:0px;
+    --inner-padding-end:0px;
+    background-color:   var(--ion-color-primary-shade);
+    --background:   var(--ion-color-primary-shade);
+    --color:   var(--ion-color-primary-contrast);
+    color:   var(--ion-color-primary-contrast);
+    ion-icon{
+      color:var(--ion-color-primary-contrast);
+
+    }
+    ion-icon:hover{
+      transform: rotate(25deg);
+      font-size:1.7em;
+    }
+    ion-badge{
+     --background: var(--ion-color-warning);
+     --color: var(--ion-color-warning-contrast);
+     z-index: 3;
+     height: 14px;
+     font-size: 9px;
+     position: relative;
+     top: -10px;
+     left: -4px;
+
+   }
+   ion-text{
+    font-size:13px;
+  }
+  .withBadge{
+    margin-left: 5px;
+  }
+}
+ion-item:hover{
+ --background:   var(--ion-color-primary-tint);
+ background-color:   var(--ion-color-primary-tint);
+ cursor:pointer;
+}
+.tint{
+  --background: var(--ion-color-primary-shade);
+
+}
+.firstItem{
+
+}
+.selected{
+  color: var(--ion-color-warning-tint);
+  --background: var(--ion-color-primary);
+  ion-icon{
+    color: var(--ion-color-warning-tint);
+  }
+}
+.leftMenu{
+  color: var(--ion-color-primary-contrast);
+  padding: 0px;
+  text-align: center; 
+  font-size: 23px;
+  max-width:50px;
+  width:50px;
+  background:   var(--ion-color-primary-shade);
+  transition: max-width ease 0.6s;
+  box-shadow: -3px -1px 10px 3px rgb(36 15 15 / 41%);
+  z-index: 4;
+  .separator{ 
+    margin-top:12px;
+    margin-bottom:12px;
+    border-bottom:1px solid var(--ion-color-primary);
+  }
+  .expandButton{
+    cursor:  pointer;
+  }
+
+  .disabledIcon{
+    color:var(--ion-color-primary-tint);
+  }
+  ion-item:hover{
+   .disabledIcon{
+    color:var(--ion-color-primary-contrast);
+  }
+}
+
+}
+
+.expanded{
+ max-width:250px;
+ width:250px;
+ box-shadow: 4px -1px 11px 0px rgb(36 15 15 / 41%);
+ z-index:4;
+
+}
+ion-footer{
+  position:absolute;
+  bottom:0px;
+  text-align: left;
+  padding-left:12px;
+
+}
+
+}
+.trash{
+  position:absolute;
+  bottom:36px;
+}
+.shadowContent{
+  box-shadow: 4px 0px 16px rgb(0 0 0 / 18%);
+}
+
+.menuIcon{
+  --border-radius:50%;
+  height: 45px;
+  width: 45px;
+  ion-icon{
+    font-size:30px;
+    color:var(--ion-color-primary-tint)
+  }
 }
