--- a/src/app/project/executive/team/send-invitation/send-invitation.component.html
+++ b/src/app/project/executive/team/send-invitation/send-invitation.component.html
@@ -4,7 +4,7 @@
 	</ion-item>
 	<div class="ion-text-center ion-padding"><img src="./assets/images/undraw_shared_workspace_hwky.svg" class="welcomePicture"></div>
 	<ion-text class="ion-text-center ion-padding title"><h1>{{'TEAM.AddMemberTitle' | translate}}</h1></ion-text>
-	<p class="ion-text-uppercase"><ion-text>{{'TEAM.AddMemberSubTitle' | translate}}</ion-text></p>
+	<p><ion-text>{{'TEAM.AddMemberSubTitle' | translate}}</ion-text></p>
 	<ion-item class="ion-margin-bottom">
 		<ion-label position="floating" >{{'TEAM.Email' | translate}}</ion-label>
 		<ion-input placeholder="nouveauMembre@gmail.com" type="text"  [(ngModel)] ="teamMember.email"></ion-input>
