--- a/src/app/project/executive/team/team.page.html
+++ b/src/app/project/executive/team/team.page.html
@@ -1,73 +1,107 @@
 <ion-content>
 	<div class="wave">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-			<path fill="#3880ff" fill-opacity="1" d="M0,192L40,192C80,192,160,192,240,192C320,192,400,192,480,208C560,224,640,256,720,245.3C800,235,880,181,960,144C1040,107,1120,85,1200,112C1280,139,1360,213,1400,250.7L1440,288L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
-		</div>
-		<ion-grid class="teamMembers">
-			<ion-row>
-				<ion-col *ngFor="let teamMember of teamMembers">
-					<ion-card class="teamMember">
-						<ion-card-content class="ion-text-center">
-							<ion-avatar *ngIf="teamMember.profile !== undefined && teamMember.profile.photoUrl !== undefined" class="avatar ion-margin-bottom">
-								<img [src]="teamMember.profile.photoUrl" >
-							</ion-avatar>
-							<ion-avatar *ngIf="teamMember.profile === undefined || teamMember.profile.photoUrl === undefined" class="avatar ion-margin-bottom">
-								<ion-icon color="primary" class="iconUnknown" name="person-circle-outline"></ion-icon>
-							</ion-avatar>
-							<div class="linkedInWrapper">
-								<div *ngIf="teamMember.profile !== undefined">
-									<div *ngIf="teamMember.profile.linkedInUrl !== undefined">
-										<a [href]="teamMember.profile.linkedInUrl" target="_blank" *ngIf="teamMember.profile.linkedInUrl !== '' "   >LinkedIn Profile</a>
-									</div>
+			<path fill="#3880ff" fill-opacity="1" d="M0,192L40,192C80,192,160,192,240,192C320,192,400,192,480,208C560,224,640,256,720,245.3C800,235,880,181,960,144C1040,107,1120,85,1200,112C1280,139,1360,213,1400,250.7L1440,288L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path>
+		</svg>
+	</div>
+	<ion-item class="screenTitle" lines="none">
+		<ion-label >
+			<h2> Mon Equipe</h2>
+			<p>Une équipe compétente et complémentaire maximise les chances de réussites de votre projet</p>
+			
+		</ion-label>
+
+	</ion-item>
+
+	<ion-grid class="teamMembers">
+		<ion-row>
+			<ion-col *ngIf="accessRights.write ===true">
+				<ion-card class="teamMember teamMemberAdd" >
+					<ion-card-content>
+						<p>{{'TEAM.AddTeamMembertext1' | translate }} <span *ngIf="teamMembers.length>1"> {{teamMembers.length}}</span> <span *ngIf="teamMembers.length ===1"> {{'TEAM.AddTeamMembertextAlone' | translate }} </span> {{'TEAM.AddTeamMembertext2' | translate }}  <b>{{project.summary.name}}</b>{{'TEAM.AddTeamMembertext3' | translate }} </p>
+						<ul class="ion-text-left">
+							<li *ngFor="let projectProfile of projectProfiles">
+								{{'TEAM.ProjectProfiles.'+projectProfile | translate }}								
+							</li>
+						</ul> 
+						<div class="separator"></div>
+						<div class="ion-margin-bottom">
+							<ion-button  color="secondary" expand="block" class="ion-text-wrap" tooltip="{{'TEAM.SendInviteTooltip' | translate }}" [options]="tooltipOptions" (click)="requestNewMember()">
+								<ion-icon name="mail-outline" class="ion-margin-end"></ion-icon>
+								<ion-text class="ion-text-wrap" >{{'TEAM.SendInviteText' | translate }}</ion-text>
+							</ion-button>
+						</div>
+						<div class="ion-margin-top ion-padding-top ion-text-left">
+							
+							<ion-button class="ion-text-wrap " expand="block" tooltip="{{'TEAM.SearchSkillsTooltip' | translate }}" [options]="tooltipOptions" (click)="requestFindSkills()" >
+								<ion-icon name="search-outline"  class="ion-margin-end"></ion-icon>
+								<ion-text class="ion-text-wrap" >{{'TEAM.SearchSkills' | translate }}</ion-text>
+							</ion-button>
+							<div class="skillSearchNumber" (click)="displaySkillSearches()" *ngIf="skillSearches.length >0"><ion-text> {{skillSearches.length}} {{'TEAM.SearchSkilledSaved' | translate }}</ion-text></div>
+						</div>
+
+						
+					</ion-card-content>
+				</ion-card>
+
+
+			</ion-col>
+			<ion-col *ngFor="let teamMember of teamMembers">
+				<ion-card class="teamMember">
+					<ion-card-content class="ion-text-center">
+						<ion-avatar *ngIf="teamMember.profile !== undefined && teamMember.profile.photoUrl !== undefined" class="avatar ion-margin-bottom">
+							<img [src]="teamMember.profile.photoUrl" >
+						</ion-avatar>
+						<ion-avatar *ngIf="teamMember.profile === undefined || teamMember.profile.photoUrl === undefined" class="avatar ion-margin-bottom">
+							<ion-icon color="primary" class="iconUnknown" name="person-circle-outline"></ion-icon>
+						</ion-avatar>
+						<div class="linkedInWrapper">
+							<div *ngIf="teamMember.profile !== undefined">
+								<div *ngIf="teamMember.profile.linkedInUrl !== undefined">
+									<a [href]="teamMember.profile.linkedInUrl" target="_blank" *ngIf="teamMember.profile.linkedInUrl !== '' "   >LinkedIn Profile</a>
 								</div>
-								
 							</div>
-							<div class="title">
-								<h1 *ngIf="teamMember.uid && teamMember.profile" class="ion-margin-top"> 
-									<ion-text>{{teamMember.profile.firstName }} {{teamMember.profile.lastName}} </ion-text>
-								</h1>
-								<h1 *ngIf="!teamMember.uid" class="ion-margin-top"> <ion-text  color="primary">{{teamMember.email}} </ion-text></h1>
-							</div>
-							<ion-item>
-								<ion-select [interfaceOptions]="customAlertOptions"
-								*ngIf="accessRights.write ===true"  placeholder="{{'TEAM.TeamMember.Role' | translate }}" [(ngModel)] ="teamMember.role"  (ionChange)="updateProfile(teamMember)" class="fullWidth selectStyle">
-								<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
-							</ion-select>
-							<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.role}}</ion-text>
-						</ion-item>
+
+						</div>
+						<div class="title">
+							<h1 *ngIf="teamMember.uid && teamMember.profile" class="ion-margin-top"> 
+								<ion-text>{{teamMember.profile.firstName }} {{teamMember.profile.lastName}} </ion-text>
+							</h1>
+							<h1 *ngIf="!teamMember.uid" class="ion-margin-top"> <ion-text  color="primary">{{teamMember.email}} </ion-text></h1>
+						</div>
 						<ion-item>
-							<ion-select [interfaceOptions]="customAlertOptions" 
-							*ngIf="accessRights.write ===true" placeholder="{{'TEAM.TeamMember.Profile' | translate }}" [(ngModel)] ="teamMember.projectProfile" (ionChange)="updateProfile(teamMember)"  multiple="true"  class="fullWidth selectStyle">
-
-							<ion-select-option  *ngFor="let item of projectProfilesItems" [value]="item.index">{{item.text}}</ion-select-option>
+							<ion-select [interfaceOptions]="customAlertOptions"
+							*ngIf="accessRights.write ===true"  placeholder="{{'TEAM.TeamMember.Role' | translate }}" [(ngModel)] ="teamMember.role"  (ionChange)="updateProfile(teamMember)" class="fullWidth selectStyle">
+							<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
 						</ion-select>
-						<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.projectProfile}}</ion-text>
+						<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.role}}</ion-text>
 					</ion-item>
-					<ion-item *ngIf="accessRights.write ===true">
+					<ion-item>
+						<ion-select [interfaceOptions]="customAlertOptions" 
+						*ngIf="accessRights.write ===true" placeholder="{{'TEAM.TeamMember.Profile' | translate }}" [(ngModel)] ="teamMember.projectProfile" (ionChange)="updateProfile(teamMember)"  multiple="true"  class="fullWidth selectStyle">
 
-						<ion-textarea  [(ngModel)] ="teamMember.mission" class="fullWidth" (ionChange)="updateProfile(teamMember)"></ion-textarea>
+						<ion-select-option  *ngFor="let item of projectProfilesItems" [value]="item.index">{{item.text}}</ion-select-option>
+					</ion-select>
+					<ion-text  *ngIf="accessRights.write ===false" >{{teamMember.projectProfile}}</ion-text>
+				</ion-item>
+				<ion-item *ngIf="accessRights.write ===true">
 
-					</ion-item>
-					<ion-item *ngIf="accessRights.write ===false">
-						<ion-label><p >{{'TEAM.TeamMember.Mission' | translate }}</p>
+					<ion-textarea  [(ngModel)] ="teamMember.mission" class="fullWidth" (ionChange)="updateProfile(teamMember)"></ion-textarea>
+
+				</ion-item>
+				<ion-item *ngIf="accessRights.write ===false">
+					<ion-label><p >{{'TEAM.TeamMember.Mission' | translate }}</p>
 						<p ><ion-text   class="ion-text-wrap">{{teamMember.mission}}</ion-text></p>
 					</ion-label>
-					</ion-item>
-					<ion-item lines="none"  *ngIf="accessRights.write ===true">		
-						<ion-button (click)="removeTeamMember(teamMember) "  *ngIf="uid !== teamMember.uid">{{'TEAM.Remove' | translate }}</ion-button>
-					</ion-item>
-				</ion-card-content>
-			</ion-card>
-		</ion-col>
+				</ion-item>
+				<ion-item lines="none"  *ngIf="accessRights.write ===true">		
+					<ion-button (click)="removeTeamMember(teamMember) "  *ngIf="uid !== teamMember.uid">{{'TEAM.Remove' | translate }}</ion-button>
+				</ion-item>
+			</ion-card-content>
+		</ion-card>
+	</ion-col>
 
-		<ion-col *ngIf="accessRights.write ===true">
-			<ion-card class="teamMember teamMemberAdd" (click)="requestNewMember()">
-				<ion-card-content>
-					<ion-icon name="add-outline" color="primary"  class="addButton"></ion-icon>
-					<h2>{{'TEAM.SendInviteText' | translate }}</h2>
-				</ion-card-content>
-			</ion-card>
-		</ion-col>
-	</ion-row>
+
+</ion-row>
 </ion-grid>
 </ion-content>
