--- a/src/app/project/menu-popover/menu-popover.component.html
+++ b/src/app/project/menu-popover/menu-popover.component.html
@@ -1,10 +1,10 @@
-	<ion-list >
-		<ion-item *ngFor="let p of pages; let i = index"  routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" >
-			<ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-			<ion-label> {{p.title}}</ion-label>
-		</ion-item>		
-		<ion-item href="https://www.facebook.com/groups/entrepreneurstudio" target="_blank" lines="none" detail="false">
-			<ion-icon color="primary" slot="start" ios="chatbubbles-outline" md="people-circle-sharp"></ion-icon>
-			<ion-label>{{'PROJECT.SystemD' | translate}}</ion-label>
-		</ion-item>	
-	</ion-list> 
+	 <ion-list >
+	 	<ion-item *ngFor="let p of pages; let i = index"  routerDirection="root" [routerLink]="[p.url]"  detail="false" (click)="dismiss()">
+	 		<ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+	 		<ion-label> {{p.title}}</ion-label>
+	 	</ion-item>		
+	 	<ion-item href="https://www.facebook.com/groups/entrepreneurstudio" target="_blank" lines="none" detail="false">
+	 		<ion-icon color="primary" slot="start" ios="chatbubbles-outline" md="people-circle-sharp"></ion-icon>
+	 		<ion-label>{{'PROJECT.SystemD' | translate}}</ion-label>
+	 	</ion-item>	
+	 </ion-list> 
